# duck_egg_fertility_detection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  Tahapan_Penelitian.docx  changelog.md  docker-compose.yml  environment.yml  fix_doc.py  full_eval  insert_eda.py  pyproject.toml  readme.md  requirements-web.txt  requirements.txt  run.sh  setup.py  statistical_tests  temp_test_secure.py  xai
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: __init__.py  app.py  utils.py
configs/: __init__.py  app_config.yaml  awc_config.yaml  awc_config_hybrid_glcm.yaml  deployment_config.yaml  evaluation_config.yaml  paths_config.yaml  preprocessing_config.yaml  unet_config.yaml  unet_config_train30.yaml  web_config.yaml
data/annotations/: __init__.py
data/features/: .gitkeep  feature_metadata.json
data/features_hybrid_glcm/: feature_metadata.json
data/preprocessed/: .gitkeep
data/raw/: .gitkeep
data/uploads/: .gitkeep  __init__.py
deployment/: Dockerfile  __init__.py  docker-compose.yml  nginx.conf  requirements-deploy.txt
deployment/database/: init.sql
docs/: __init__.py
models/: __init__.py
models/awc/: __init__.py  awc_model.pkl
models/baselines/: __init__.py  kmeans_model.pkl
models/unet/: __init__.py
models/versions/: __init__.py
papers/: BAB3_BAB4_revisi_sinkron_detail.txt  Laporan_Standarisasi_Tahapan_Penelitian.docx  Penilitian Pak Andi.docx  Penilitian_Pak_Andi_dengan_Formula.docx  Tahapan_Penelitian_Gabungan.docx  USULAN PENELITIAN -Andi Nur Rachman 2491011008 Revisi 1 041225.docx  USULAN PENELITIAN -Andi Nur Rachman 2491011008 Revisi 2 200426.docx  __init__.py  tahapan_penelitian.html
plans/: prioritas_proyek.md
results/: __init__.py  unet_train_log.txt
results/awc_evaluation/: metrics.json
results/evaluation/: classification_report.json  evaluation_results.json  full_evaluation_predictions.csv
results/figures/: __init__.py
results/logs/: __init__.py
results/statistical_tests/: eval_summary.json  report.json  report_full.json  summary.txt  wilcoxon_table.tex  wilcoxon_table_full.tex
results/tables/: __init__.py
scripts/: 01_preprocess_data.py  02_create_annotations.py  03_train_unet.py  03b_generate_masks.py  04_extract_features.py  05_train_awc.py  06_evaluate_models.py  07_inference.py  10_explain.py  11_statistical_tests.py  12_full_statistical_evaluation.py  __init__.py  organize_dataset.py  run_full_evaluation.py  tmp_split.py
src/: __init__.py
src/clustering/: __init__.py  awc.py  fuzzy_cmeans.py  kmeans_baseline.py
src/evaluation/: __init__.py  metrics.py  segmentation_metrics.py  statistical_tests.py  visualization.py
src/features/: __init__.py  classical_features.py  deep_features.py  fusion.py  hybrid_features.py  utils.py
src/preprocessing/: __init__.py  advanced.py  clahe.py  denoising.py  homomorphic.py  preprocessor.py  utils.py
src/segmentation/: __init__.py  data_loader.py  losses.py  postprocessing.py  trainer.py  unet.py  unet_lightweight.py
src/utils/: __init__.py  config.py  file_utils.py  logger.py  plotting.py
src/web/: database.py  model_manager.py  (+2 more)
tests/: __init__.py  check_struct2.py  check_struct3.py
(+59 files in other folders)
